<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayoutGame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PuzzleActivity" >

    <TextView
        android:id="@+id/buttonGameCounterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_textview_counterText"/>
    
    <TextView
        android:id="@+id/buttonGameCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_textview_counter" 
        android:layout_alignParentRight="true"/>
    
    <TextView
        android:id="@+id/buttonGameTimerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_textview_timerText"
        android:layout_below="@id/buttonGameCounterText"/>
    
    <TextView
        android:id="@+id/buttonGameTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_textview_timer" 
        android:layout_alignParentRight="true"
        android:layout_below="@id/buttonGameCounter"/>

    <ImageView
        android:id="@+id/imageView0_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonGameTimerText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/start" 
        android:contentDescription="@string/game_imageview_0_1"/>
    
    <ImageView
        android:id="@+id/imageView0_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/imageView0_1"
        android:layout_below="@+id/buttonGameTimerText"
        android:layout_marginTop="40dp"
        android:src="@drawable/start" 
        android:contentDescription="@string/game_imageview_0_0"/>
    
    <ImageView
        android:id="@+id/imageView0_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageView0_1"
        android:layout_below="@+id/buttonGameTimerText"
        android:layout_marginTop="40dp"
        android:src="@drawable/start" 
        android:contentDescription="@string/game_imageview_0_2"/>
    
    <ImageView
        android:id="@+id/imageView1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView0_1"
        android:layout_centerHorizontal="true"
        android:src="@drawable/start" 
        android:contentDescription="@string/game_imageview_1_1"/>
    
    <ImageView
        android:id="@+id/imageView1_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView0_0"
        android:layout_toLeftOf="@+id/imageView1_1"
        android:src="@drawable/start" 
        android:contentDescription="@string/game_imageview_1_0"/>
    
    <ImageView
        android:id="@+id/imageView1_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView0_2"
        android:layout_toRightOf="@+id/imageView1_1"
        android:src="@drawable/start" 
        android:contentDescription="@string/game_imageview_1_2"/>
    
    <ImageView
        android:id="@+id/imageView2_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1_1"
        android:layout_centerHorizontal="true"
        android:src="@drawable/start" 
        android:contentDescription="@string/game_imageview_2_2"/>
    
    <ImageView
        android:id="@+id/imageView2_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1_0"
        android:layout_toLeftOf="@+id/imageView2_1"
        android:src="@drawable/start" 
        android:contentDescription="@string/game_imageview_2_1"/>
    
    <ImageView
        android:id="@+id/imageView2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1_2"
        android:layout_toRightOf="@+id/imageView2_1"
        android:src="@drawable/start" 
        android:contentDescription="@string/game_imageview_2_3"/>
    
    <Button 
        android:id="@+id/ButtonGameBackToMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_button_backToMain"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
