<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    
    <Button 
        android:id="@+id/buttonMainNewGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_button_newGame"
        android:layout_centerVertical="true"/>
    
    <Button 
        android:id="@+id/buttonMainContinueGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_button_continueGame"
        android:layout_below="@id/buttonMainNewGame"/>
    
    <Button 
        android:id="@+id/buttonMainHighscore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_button_highscore"
        android:layout_below="@id/buttonMainContinueGame"/>
    
    <Button 
        android:id="@+id/buttonMainSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_button_settings"
        android:layout_below="@id/buttonMainHighscore"/>
    
    

</RelativeLayout>
