<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

     <!-- Header -->

    <RelativeLayout
        android:id="@+id/headerSelect"
        style="@style/HeaderFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <TextView
            style="@style/HeaderFooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/app_name" />
    </RelativeLayout>
    

    <!-- Footer -->

    <RelativeLayout
        android:id="@+id/footerMain"
        style="@style/HeaderFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <TextView
            style="@style/HeaderFooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/copyright" />
    </RelativeLayout>

    <!-- Content -->

    <RelativeLayout
        android:id="@+id/ContentMain"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/footerMain"
        android:layout_below="@id/headerSelect"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <!-- insert Content here -->
        
        <Button
 		android:id="@+id/loadimage"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:text="@string/load_button"
 		/>
        
        <GridView 
			android:id="@+id/gridview"
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent"
			android:layout_below="@id/loadimage"
			android:numColumns="auto_fit"
			android:columnWidth="90dp"
			android:horizontalSpacing="10dp"
			android:verticalSpacing="10dp"
			android:gravity="center"
			android:stretchMode="columnWidth"
			
		/>
        
    </RelativeLayout>

</RelativeLayout>